versioned_docs/version-5.4/client-api/operations/maintenance/indexes/stop-indexing.mdx
---
title: "Pause Indexing Operation"
hide_table_of_contents: true
sidebar_label: Pause Indexing
sidebar_position: 9
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "java", "python", "php", "nodejs"];


# Pause Indexing Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* Use `StopIndexingOperation` to **pause indexing** for ALL indexes in the database.  

* To pause only a specific index use the [StopIndexOperation](../../../../client-api/operations/maintenance/indexes/stop-index.mdx).  
 
* In this page:
  * [Overview](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx#overview)
  * [Pause indexing example](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx#pause-indexing-example)
  * [Syntax](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx#syntax)

</Admonition>
## Overview

#### Which node is indexing paused for?

* When pausing indexing from the **client**:  
  Indexing will be paused on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, and Not on all the database-group nodes.  

* When pausing indexing from the **Studio** [database list](../../../../studio/database/databases-list-view.mdx#more-actions) view:  
  Indexing will be paused on the local node the browser is opened on, even if it is Not the preferred node.
#### What happens when indexing is paused for a node?

* No indexing takes place on a node that indexing is paused for.  
  New data **is** indexed on database-group nodes that indexing is not paused for.

* All indexes, including paused ones, can be queried, 
  but results may be stale when querying nodes that indexing has been paused for.
 
* New indexes **can** be created for the database.  
  However, the new indexes will also be paused on any node that indexing is paused for,  
  until indexing is resumed for that node.  

* When [resetting](../../../../client-api/operations/maintenance/indexes/reset-index.mdx) indexes 
  or editing index definitions, re-indexing on a node that indexing has been paused for will 
  only be triggered when indexing is resumed on that node.
#### Resuming indexing:

* Learn to resume indexing for all indexes by a client, here: [resume indexing](../../../../client-api/operations/maintenance/indexes/start-indexing.mdx)  

* Learn to resume indexing for all indexes via **Studio**, here: [database list view](../../../../studio/database/databases-list-view.mdx#more-actions)  

* Pausing indexing is **Not a persistent operation**.  
  This means that all paused indexes will resume upon either of the following:
    * The server is restarted.
    * The database is re-loaded (by disabling and then enabling it).  
      Toggling the database state can be done using the **Studio** [database list](../../../../studio/database/databases-list-view.mdx#database-actions) view,  
      or using [ToggleDatabasesStateOperation](../../../../client-api/operations/server-wide/toggle-databases-state.mdx) by the client.



## Pause indexing example

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Define the pause indexing operation 
var pauseIndexingOp = new StopIndexingOperation();

// Execute the operation by passing it to Maintenance.Send
store.Maintenance.Send(pauseIndexingOp);

// At this point:
// All indexes in the default database will be 'paused' on the preferred node
        
// Can verify indexing status on the preferred node by sending GetIndexingStatusOperation
var indexingStatus = store.Maintenance.Send(new GetIndexingStatusOperation());
Assert.Equal(IndexRunningStatus.Paused, indexingStatus.Status);
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Define the pause indexing operation 
var pauseIndexingOp = new StopIndexingOperation();

// Execute the operation by passing it to Maintenance.SendAsync
await store.Maintenance.SendAsync(pauseIndexingOp);

// At this point:
// All indexes in the default database will be 'paused' on the preferred node
        
// Can verify indexing status on the preferred node by sending GetIndexingStatusOperation
var indexingStatus = await store.Maintenance.SendAsync(new GetIndexingStatusOperation());
Assert.Equal(IndexRunningStatus.Paused, indexingStatus.Status);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="csharp">
{`// class name has "Stop", but this is ok, this is the "Pause" operation
public StopIndexingOperation()
`}
</CodeBlock>
</TabItem>




</LanguageContent>
<LanguageContent language="java">


**StopIndexingOperation** is used to pause indexing for the entire database.

Use [StopIndexOperation](../../../../client-api/operations/maintenance/indexes/stop-index.mdx) to stop single index.

<Admonition type="note" title="Note">
Indexing will be resumed automatically after a server restart or after using [start indexing operation](../../../../client-api/operations/maintenance/indexes/start-indexing.mdx).
</Admonition>

### Syntax

<TabItem value="stop_1" label="stop_1">
<CodeBlock language="java">
{`public StopIndexingOperation()
`}
</CodeBlock>
</TabItem>

### Example

<TabItem value="stop_2" label="stop_2">
<CodeBlock language="java">
{`store.maintenance().send(new StopIndexingOperation());
`}
</CodeBlock>
</TabItem>


</LanguageContent>
<LanguageContent language="python">

<Admonition type="note" title="Note">

* Use `StopIndexingOperation` to **pause indexing** for ALL indexes in the database.  

* To pause only a specific index use the [StopIndexOperation](../../../../client-api/operations/maintenance/indexes/stop-index.mdx).  
 
* In this page:
  * [Overview](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx#overview)
  * [Pause indexing example](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx#pause-indexing-example)
  * [Syntax](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx#syntax)

</Admonition>
## Overview

#### Which node is indexing paused for?

* When pausing indexing from the **client**:  
  Indexing will be paused on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, and Not on all the database-group nodes.  

* When pausing indexing from the **Studio** [database list](../../../../studio/database/databases-list-view.mdx#more-actions) view:  
  Indexing will be paused on the local node the browser is opened on, even if it is Not the preferred node.
#### What happens when indexing is paused for a node?

* No indexing takes place on a node that indexing is paused for.  
  New data **is** indexed on database-group nodes that indexing is not paused for.

* All indexes, including paused ones, can be queried, 
  but results may be stale when querying nodes that indexing has been paused for.
 
* New indexes **can** be created for the database.  
  However, the new indexes will also be paused on any node that indexing is paused for,  
  until indexing is resumed for that node.  

* When [resetting](../../../../client-api/operations/maintenance/indexes/reset-index.mdx) indexes 
  or editing index definitions, re-indexing on a node that indexing has been paused for will 
  only be triggered when indexing is resumed on that node.
#### Resuming indexing:

* Learn to resume indexing for all indexes by a client, here: [resume indexing](../../../../client-api/operations/maintenance/indexes/start-indexing.mdx)  

* Learn to resume indexing for all indexes via **Studio**, here: [database list view](../../../../studio/database/databases-list-view.mdx#more-actions)  

* Pausing indexing is **Not a persistent operation**.  
  This means that all paused indexes will resume upon either of the following:
    * The server is restarted.
    * The database is re-loaded (by disabling and then enabling it).  
      Toggling the database state can be done using the **Studio** [database list](../../../../studio/database/databases-list-view.mdx#database-actions) view,  
      or using [ToggleDatabasesStateOperation](../../../../client-api/operations/server-wide/toggle-databases-state.mdx) by the client.



## Pause indexing example

<TabItem value="pause_indexing" label="pause_indexing">
<CodeBlock language="python">
{`# Define the pause indexing operation
pause_indexing_op = StopIndexingOperation()

# Execute the operation by passing it to maintenance.send
store.maintenance.send(pause_indexing_op)

# At this point:
# All indexes in the default database will be 'paused' on the preferred node

# Can verify indexing status on the preferred node by sending GetIndexingStatusOperation
indexing_status = store.maintenance.send(GetIndexingStatusOperation())
self.assertEqual(indexing_status.status, IndexRunningStatus.PAUSED)
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="python">
{`# class name has "Stop", but this is ok, this is the "Pause" operation
class StopIndexingOperation(VoidMaintenanceOperation):
    def __init__(self): ...
`}
</CodeBlock>
</TabItem>




</LanguageContent>
<LanguageContent language="php">

<Admonition type="note" title="Note">

* Use `StopIndexingOperation` to **pause indexing** for ALL indexes in the database.  

* To pause only a specific index use the [StopIndexOperation](../../../../client-api/operations/maintenance/indexes/stop-index.mdx).  
 
* In this page:
  * [Overview](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx#overview)
  * [Pause indexing example](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx#pause-indexing-example)
  * [Syntax](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx#syntax)

</Admonition>
## Overview

#### Which node is indexing paused for?

* When pausing indexing from the **client**:  
  Indexing will be paused on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, and Not on all the database-group nodes.  

* When pausing indexing from the **Studio** [database list](../../../../studio/database/databases-list-view.mdx#more-actions) view:  
  Indexing will be paused on the local node the browser is opened on, even if it is Not the preferred node.
#### What happens when indexing is paused for a node?

* No indexing takes place on a node that indexing is paused for.  
  New data **is** indexed on database-group nodes that indexing is not paused for.

* All indexes, including paused ones, can be queried, 
  but results may be stale when querying nodes that indexing has been paused for.
 
* New indexes **can** be created for the database.  
  However, the new indexes will also be paused on any node that indexing is paused for,  
  until indexing is resumed for that node.  

* When [resetting](../../../../client-api/operations/maintenance/indexes/reset-index.mdx) indexes 
  or editing index definitions, re-indexing on a node that indexing has been paused for will 
  only be triggered when indexing is resumed on that node.
#### Resuming indexing:

* Learn to resume indexing for all indexes by a client, here: [resume indexing](../../../../client-api/operations/maintenance/indexes/start-indexing.mdx)  

* Learn to resume indexing for all indexes via **Studio**, here: [database list view](../../../../studio/database/databases-list-view.mdx#more-actions)  

* Pausing indexing is **Not a persistent operation**.  
  This means that all paused indexes will resume upon either of the following:
    * The server is restarted.
    * The database is re-loaded (by disabling and then enabling it).  
      Toggling the database state can be done using the **Studio** [database list](../../../../studio/database/databases-list-view.mdx#database-actions) view,  
      or using [ToggleDatabasesStateOperation](../../../../client-api/operations/server-wide/toggle-databases-state.mdx) by the client.



## Pause indexing example

<TabItem value="pause_indexing" label="pause_indexing">
<CodeBlock language="php">
{`// Define the pause indexing operation
$pauseIndexingOp = new StopIndexingOperation();

// Execute the operation by passing it to Maintenance.Send
$store->maintenance()->send($pauseIndexingOp);

// At this point:
// All indexes in the default database will be 'paused' on the preferred node

// Can verify indexing status on the preferred node by sending GetIndexingStatusOperation
/** @var IndexingStatus $indexingStatus */
$indexingStatus = $store->maintenance()->send(new GetIndexingStatusOperation());
$this->assertTrue($indexingStatus->getStatus()->isPaused());
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="php">
{`// class name begins with "Stop" but this is still the "Pause" operation
StopIndexingOperation()
`}
</CodeBlock>
</TabItem>




</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* Use `StopIndexingOperation` to **pause indexing** for ALL indexes in the database.  

* To pause only a specific index use the [StopIndexOperation](../../../../client-api/operations/maintenance/indexes/stop-index.mdx).  
 
* In this page:
  * [Overview](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx#overview)
  * [Pause indexing example](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx#pause-indexing-example)
  * [Syntax](../../../../client-api/operations/maintenance/indexes/stop-indexing.mdx#syntax)

</Admonition>
## Overview

#### Which node is indexing paused for?

* When pausing indexing from the **client**:  
  Indexing will be paused on the [preferred node](../../../../client-api/configuration/load-balance/overview.mdx#the-preferred-node) only, and Not on all the database-group nodes.  

* When pausing indexing from the **Studio** [database list](../../../../studio/database/databases-list-view.mdx#more-actions) view:  
  Indexing will be paused on the local node the browser is opened on, even if it is Not the preferred node.
#### What happens when indexing is paused for a node?

* No indexing takes place on a node that indexing is paused for.  
  New data **is** indexed on database-group nodes that indexing is not paused for.

* All indexes, including paused ones, can be queried, 
  but results may be stale when querying nodes that indexing has been paused for.
 
* New indexes **can** be created for the database.  
  However, the new indexes will also be paused on any node that indexing is paused for,  
  until indexing is resumed for that node.  

* When [resetting](../../../../client-api/operations/maintenance/indexes/reset-index.mdx) indexes 
  or editing index definitions, re-indexing on a node that indexing has been paused for will 
  only be triggered when indexing is resumed on that node.
#### Resuming indexing:

* Learn to resume indexing for all indexes by a client, here: [resume indexing](../../../../client-api/operations/maintenance/indexes/start-indexing.mdx)  

* Learn to resume indexing for all indexes via **Studio**, here: [database list view](../../../../studio/database/databases-list-view.mdx#more-actions)  

* Pausing indexing is **Not a persistent operation**.  
  This means that all paused indexes will resume upon either of the following:
    * The server is restarted.
    * The database is re-loaded (by disabling and then enabling it).  
      Toggling the database state can be done using the **Studio** [database list](../../../../studio/database/databases-list-view.mdx#database-actions) view,  
      or using [ToggleDatabasesStateOperation](../../../../client-api/operations/server-wide/toggle-databases-state.mdx) by the client.



## Pause indexing example

<TabItem value="pause_indexing" label="pause_indexing">
<CodeBlock language="js">
{`// Define the pause indexing operation 
const pauseIndexingOp = new StopIndexingOperation();

// Execute the operation by passing it to maintenance.send
await store.maintenance.send(pauseIndexingOp);

// At this point:
// All indexes in the default database will be 'paused' on the preferred node

// Can verify indexing status on the preferred node by sending GetIndexingStatusOperation
const indexingStatus = await store.maintenance.send(new GetIndexingStatusOperation());
assert.strictEqual(indexingStatus.status, "Paused");
`}
</CodeBlock>
</TabItem>



## Syntax

<TabItem value="syntax" label="syntax">
<CodeBlock language="js">
{`// class name has "Stop", but this is ok, this is the "Pause" operation
const pauseIndexingOp = new StopIndexingOperation();
`}
</CodeBlock>
</TabItem>




</LanguageContent>

<!---
### Indexes
- [What are Indexes](../../../../indexes/what-are-indexes)
- [Creating and Deploying Indexes](../../../../indexes/creating-and-deploying)
- [Index Administration](../../../../indexes/index-administration)

### Operations
- [How to Enable Index](../../../../client-api/operations/maintenance/indexes/enable-index)
- [How to Pause Index Until Restart](../../../../client-api/operations/maintenance/indexes/stop-index)
- [How to Resume Indexing](../../../../client-api/operations/maintenance/indexes/start-indexing)

### Studio
- [Enable/Disable database from Studio](../../../../studio/database/databases-list-view#database-actions)
- [Pause indexing from Studio](../../../../studio/database/databases-list-view#more-actions)


-->